Fix z-index file

--- a/packages/base-styles/_z-index.scss
+++ b/packages/base-styles/_z-index.scss
@@ -143,7 +143,7 @@ $z-layers: (
 	".interface-interface-skeleton__actions": 100000,
 
 	// The focus styles of the region navigation containers should be above their content.
-	".is-focusing-regions {region} :focus::after": 1000000
+	".is-focusing-regions {region} :focus::after": 1000000,
 
 	// Show NUX tips above popovers, wp-admin menus, submenus, and sidebar:
 	".nux-dot-tip": 1000001,
